Copy assets as part of npm postbuild

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "npx tsc",
+    "postbuild": "cp -a package.json package-lock.json templates static dist",
     "lint": "eslint -c .eslintrc --max-warnings 0 'src/**/*.ts'",
     "watch": "npx tsc --watch",
     "test": "npx mocha -r ts-node/register test/**/*.test.ts",
