--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "npx tsc",
     "postbuild": "cp -a package.json package-lock.json templates static dist",
     "lint": "eslint -c .eslintrc --max-warnings 0 'src/**/*.ts'",
+    "lintfix": "eslint -c .eslintrc --max-warnings 0 --fix 'src/**/*.ts'",
     "watch": "npx tsc --watch",
     "test": "npx mocha -r ts-node/register test/**/*.test.ts",
     "dev:tsc": "tsc --watch -p .",
